# Open3DALIGN

open3dalign/: COPYING  ChangeLog  INSTALL  Makefile.am  configure.ac
open3dalign/doc/: Makefile.am  Open3DALIGN.html  stylesheet.css
open3dalign/src/: Makefile.am  align.c  compare.c  conf.c  filter.c  main.c  open3dalign_win64.res  parse_o3a_input.c  qmd.c  superpose_conf.c  tinker.c
open3dalign/src/include/: align.h  basis_set.h  error_messages.h  extern.h  ff_parm.h  keywords.h  nice_windows.h  o3header.h  proc_env.h  prog_exe_info.h  rl_runtime.h  safe_rint.h
open3dalign/test/: Makefile.am
open3dalign/test/ace/: Makefile.am  ace_3dqsar_canonical.sdf
open3dalign/test/ache/: Makefile.am  ache_3dqsar_canonical.sdf  ache_reproduce_orig_alignment_single.inp
open3dalign/test/bzr/: Makefile.am  bzr_3dqsar_canonical.sdf
open3dalign/test/cox2/: Makefile.am  cox2_reproduce_orig_alignment_single.inp
open3dalign/test/therm/: Makefile.am  therm_3dqsar_canonical.sdf  therm_reproduce_orig_alignment_single.inp
open3dalign/test/thr/: Makefile.am  thr_reproduce_orig_alignment_single.inp
open3dalign/test/validation_reference_results/: Makefile.am
open3dalign/test/validation_reference_results/ace/: Makefile.am  ace_reproduce_orig_alignment_single.out
open3dalign/test/validation_reference_results/ace/ace_align_atom_single/: 0001-0114_on_0008.sdf  0001-0114_on_0071.sdf  0001-0114_on_best_template_aligned_on_original.sdf  Makefile.am
open3dalign/test/validation_reference_results/ace/ace_align_mixed_single/: 0001-0114_on_0003.sdf  0001-0114_on_0008.sdf  Makefile.am
open3dalign/test/validation_reference_results/ace/ace_align_pharao_single/: 0001-0114_on_0003.sdf  0001-0114_on_0008.sdf
open3dalign/test/validation_reference_results/ache/: ache_reproduce_orig_alignment_single.out
open3dalign/test/validation_reference_results/ache/ache_align_atom_single/: 0001-0111_on_0034.sdf  0001-0111_on_best_template.sdf  0001-0111_on_best_template_aligned_on_original.sdf
open3dalign/test/validation_reference_results/ache/ache_align_mixed_single/: 0001-0111_on_best_template_aligned_on_original.sdf  Makefile.am
open3dalign/test/validation_reference_results/ache/ache_align_pharao_single/: 0001-0111_on_best_template_aligned_on_original.sdf
open3dalign/test/validation_reference_results/bzr/: Makefile.am  bzr_reproduce_orig_alignment_single.out
open3dalign/test/validation_reference_results/bzr/bzr_align_atom_single/: 0001-0163_on_0050.sdf  0001-0163_on_best_template.sdf  0001-0163_on_best_template_aligned_on_original.sdf  Makefile.am
open3dalign/test/validation_reference_results/bzr/bzr_align_mixed_single/: 0001-0163_on_best_template_aligned_on_original.sdf  Makefile.am
open3dalign/test/validation_reference_results/bzr/bzr_align_pharao_single/: 0001-0163_on_best_template.sdf  0001-0163_on_best_template_aligned_on_original.sdf  Makefile.am
open3dalign/test/validation_reference_results/cox2/cox2_align_atom_single/: 0001-0322_on_best_template.sdf  0001-0322_on_best_template_aligned_on_original.sdf  Makefile.am
open3dalign/test/validation_reference_results/cox2/cox2_align_mixed_single/: 0001-0322_on_0150.sdf  0001-0322_on_best_template_aligned_on_original.sdf
open3dalign/test/validation_reference_results/cox2/cox2_align_pharao_single/: 0001-0322_on_0150.sdf  0001-0322_on_best_template.sdf  0001-0322_on_best_template_aligned_on_original.sdf  Makefile.am
open3dalign/test/validation_reference_results/dhfr/: Makefile.am  dhfr_reproduce_orig_alignment_single.out
open3dalign/test/validation_reference_results/dhfr/dhfr_align_atom_single/: 0001-0397_on_0030.sdf  0001-0397_on_best_template.sdf  0001-0397_on_best_template_aligned_on_original.sdf
open3dalign/test/validation_reference_results/dhfr/dhfr_align_mixed_single/: 0001-0397_on_0030.sdf  0001-0397_on_0200.sdf  0001-0397_on_best_template_aligned_on_original.sdf  Makefile.am
open3dalign/test/validation_reference_results/dhfr/dhfr_align_pharao_single/: 0001-0397_on_0200.sdf  0001-0397_on_best_template.sdf  Makefile.am
open3dalign/test/validation_reference_results/gpb/: Makefile.am  gpb_reproduce_orig_alignment_single.out
open3dalign/test/validation_reference_results/gpb/gpb_align_atom_single/: 0001-0066_on_best_template_aligned_on_original.sdf  Makefile.am
open3dalign/test/validation_reference_results/gpb/gpb_align_mixed_single/: 0001-0066_on_best_template.sdf  0001-0066_on_best_template_aligned_on_original.sdf  Makefile.am
open3dalign/test/validation_reference_results/gpb/gpb_align_pharao_single/: 0001-0066_on_best_template.sdf  0001-0066_on_best_template_aligned_on_original.sdf
open3dalign/test/validation_reference_results/therm/: therm_reproduce_orig_alignment_single.out
open3dalign/test/validation_reference_results/therm/therm_align_atom_single/: 0001-0076_on_0005.sdf  0001-0076_on_0016.sdf  0001-0076_on_0024.sdf  0001-0076_on_0031.sdf  0001-0076_on_0057.sdf  0001-0076_on_best_template.sdf  0001-0076_on_best_template_aligned_on_original.sdf  Makefile.am
open3dalign/test/validation_reference_results/therm/therm_align_mixed_single/: 0001-0076_on_0005.sdf  0001-0076_on_0016.sdf  0001-0076_on_0024.sdf  0001-0076_on_0028.sdf  0001-0076_on_0031.sdf  0001-0076_on_0057.sdf  0001-0076_on_0061.sdf  0001-0076_on_0070.sdf  0001-0076_on_0071.sdf  0001-0076_on_best_template.sdf  0001-0076_on_best_template_aligned_on_original.sdf  Makefile.am
open3dalign/test/validation_reference_results/therm/therm_align_pharao_single/: 0001-0076_on_0005.sdf  0001-0076_on_0016.sdf  0001-0076_on_0024.sdf  0001-0076_on_0028.sdf  0001-0076_on_0031.sdf  0001-0076_on_0057.sdf  0001-0076_on_0061.sdf  (+4 more)
open3dalign/test/validation_reference_results/thr/: Makefile.am  thr_reproduce_orig_alignment_single.out
trunk/open3dalign/src/: Makefile.am  align.c  compare.c  conf.c  filter.c  main.c  open3dalign_win32.res  parse_o3a_input.c  qmd.c  superpose_conf.c  tinker.c
trunk/open3dalign/src/include/: align.h  basis_set.h  error_messages.h  extern.h  ff_parm.h  keywords.h  nice_windows.h  o3header.h  prog_exe_info.h  rl_runtime.h  safe_rint.h
(+151 files in other folders)
