# Makefile.am
# 
# is part of
# 
# Open3DALIGN
# -----------
# 
# An open-source software aimed at unsupervised molecular alignment
# 
# Copyright (C) 2010-2013 Paolo Tosco, Thomas Balle
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.
# 
# For further information, please contact:
# 
# Paolo Tosco, PhD
# Dipartimento di Scienza e Tecnologia del Farmaco
# Universita' degli Studi di Torino
# Via Pietro Giuria, 9
# 10125 Torino (Italy)
# Phone:  +39 011 670 7680
# Mobile: +39 348 553 7206
# Fax:    +39 011 670 7687
# E-mail: paolo.tosco@unito.it


therm_align_mixed_singledir = \
$(datadir)/@PACKAGE@/test/validation_reference_results/therm/therm_align_mixed_single
therm_align_mixed_single_DATA = \
0001-0076_on_0005.sdf \
0001-0076_on_0016.sdf \
0001-0076_on_0024.sdf \
0001-0076_on_0028.sdf \
0001-0076_on_0031.sdf \
0001-0076_on_0057.sdf \
0001-0076_on_0061.sdf \
0001-0076_on_0070.sdf \
0001-0076_on_0071.sdf \
0001-0076_on_best_template.sdf \
0001-0076_on_best_template_aligned_on_original.sdf
